--- a/NguyenTheDung_Buoi4/Views/Shared/_Layout.cshtml
+++ b/NguyenTheDung_Buoi4/Views/Shared/_Layout.cshtml
@@ -39,6 +39,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <!-- Thêm mục khác nếu cần -->
+                        <partial name="_LoginPartial" />
                     </ul>
                 </div>
             </div>
