--- a/NguyenTheDung_Buoi4/Areas/Admin/Views/Categories/Index.cshtml
+++ b/NguyenTheDung_Buoi4/Areas/Admin/Views/Categories/Index.cshtml
@@ -1,7 +1,9 @@
-﻿@model IEnumerable<NguyenTheDung_Buoi4.Models.Category>
+﻿@model IEnumerable<Category>
 
 @{
     ViewData["Title"] = "Category List";
+    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+
 }
 
 <h2 class="mb-3">Categories</h2>
