--- a/NguyenTheDung_Buoi4/Areas/Admin/Views/Product/Delete.cshtml
+++ b/NguyenTheDung_Buoi4/Areas/Admin/Views/Product/Delete.cshtml
@@ -1,5 +1,8 @@
 ﻿@model NguyenTheDung_Buoi4.Models.Product
 
+@{
+    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+}
 <div class="container mt-5">
     <div class="card shadow-sm border-danger">
         <div class="card-body">
