--- a/NguyenTheDung_Buoi4/Areas/Admin/Views/Categories/Add.cshtml
+++ b/NguyenTheDung_Buoi4/Areas/Admin/Views/Categories/Add.cshtml
@@ -1,9 +1,12 @@
-﻿@model NguyenTheDung_Buoi4.Models.Category
+﻿@model Category
 
 @{
     ViewData["Title"] = "Add Category";
 }
 
+@{
+    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+}
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-6">
