--- a/NguyenTheDung_Buoi4/Areas/Admin/Views/Categories/Display.cshtml
+++ b/NguyenTheDung_Buoi4/Areas/Admin/Views/Categories/Display.cshtml
@@ -1,5 +1,8 @@
-﻿@model NguyenTheDung_Buoi4.Models.Category
+﻿@model Category
 
+@{
+    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+}
 <h2>Category Detail</h2>
 <p><strong>ID:</strong> @Model.Id</p>
 <p><strong>Name:</strong> @Model.Name</p>
