--- a/NguyenTheDung_Buoi4/Areas/Admin/Views/Product/Add.cshtml
+++ b/NguyenTheDung_Buoi4/Areas/Admin/Views/Product/Add.cshtml
@@ -3,6 +3,7 @@
 
 @{
     ViewData["Title"] = "Add Product";
+    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
 <div class="container mt-5">
@@ -41,7 +42,7 @@
 
                         <div class="mb-3">
                             <label asp-for="ImageUrl" class="form-label">Product Image</label>
-                            <input type="file" asp-for="ImageUrl" class="form-control" />
+                            <input type="file" name="imageUrl" class="form-control" />
                         </div>
 
                         <div class="d-flex justify-content-between">
