--- a/NguyenTheDung_Buoi4/Areas/Admin/Views/Product/Update.cshtml
+++ b/NguyenTheDung_Buoi4/Areas/Admin/Views/Product/Update.cshtml
@@ -3,6 +3,9 @@
 @{
     ViewData["Title"] = "Edit Product";
 }
+@{
+    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+}
 
 <div class="container mt-4">
     <div class="card shadow-sm">
