--- a/NguyenTheDung_Buoi4/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/NguyenTheDung_Buoi4/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-light bg-white border-bottom box-shadow mb-0">
             <div class="container justify-content-center">
                 <a class="navbar-brand fw-bold text-primary" asp-area="" asp-controller="Product" asp-action="Index">
-                    NguyenTheDung_Buoi4
+                    NguyenTheDung_Buoi4_Admin
                 </a>
             </div>
         </nav>
@@ -30,10 +30,13 @@
                 <div class="collapse navbar-collapse justify-content-center" id="mainNavbar">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Product</a>
+                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Categories" asp-action="Index">Category</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <!-- Thêm mục khác nếu cần -->
                         <partial name="_LoginPartial" />
@@ -62,3 +65,4 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+
