--- a/NguyenTheDung_Buoi4/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/NguyenTheDung_Buoi4/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -36,11 +36,15 @@
                             <a class="nav-link text-dark" asp-area="Admin" asp-controller="Categories" asp-action="Index">Category</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="AdminOrders" asp-action="Index">Order Management</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="Admin" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        <!-- Thêm mục khác nếu cần -->
+
                         <partial name="_LoginPartial" />
                     </ul>
+
                 </div>
             </div>
         </nav>
