--- a/NguyenTheDung_Buoi4/Views/Shared/_Layout.cshtml
+++ b/NguyenTheDung_Buoi4/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/NguyenTheDung_Buoi4.styles.css" asp-append-version="true" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+          rel="stylesheet" />
 </head>
 <body>
     <header>
@@ -27,8 +29,9 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <div class="collapse navbar-collapse justify-content-center" id="mainNavbar">
-                    <ul class="navbar-nav">
+                <div class="collapse navbar-collapse" id="mainNavbar">
+                    <!-- Trái: menu chính -->
+                    <ul class="navbar-nav me-auto">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Product</a>
                         </li>
@@ -36,6 +39,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <!-- Thêm mục khác nếu cần -->
+                    </ul>
+
+                    <!-- Phải: login/logout -->
+                    <ul class="navbar-nav">
                         <partial name="_LoginPartial" />
                     </ul>
                 </div>
